# hammer-bootstrap

./: CMakeLists.txt  build.sh  hamroot
dependencies/: CMakeLists.txt
dependencies/boost/: CMakeLists.txt
dependencies/boost/crypto/: CMakeLists.txt
dependencies/boost/guid/: CMakeLists.txt
dependencies/boost/process/: CMakeLists.txt
dependencies/libantlr3c/: CMakeLists.txt
patches/: boost_1_40_0_thread.patch
